--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
 </head>
 <body>
-
     <input type="checkbox" id="check">
-
     <!--Header section start-->
     <header>
         <label for="check">
@@ -29,7 +27,7 @@
     <div class="sidebar">
         <center>
             <img src="1.PNG" alt="" class="profile_image">
-            <h4>Mary Ann</h4>
+            <h4>Your Name</h4>
         </center>
         <a href="#"><i class="fas fa-desktop"></i><span>Dashboard</span></a>
         <a href="#"><i class="fas fa-cogs"></i><span>Components</span></a>
